--- a/fishapp/src/main/resources/application.properties
+++ b/fishapp/src/main/resources/application.properties
@@ -1,1 +1,13 @@
 spring.application.name=fishapp
+spring.sql.init.mode=always
+server.port=7070
+spring.jpa.show-sql=true
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/kostik?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+spring.datasource.username=kostik
+spring.datasource.password=password
+spring.datasource.initialization-mode=create-drop
+spring.batch.initialize-schema=always
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
+#spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
