--- a/fishapp/src/main/resources/application.properties
+++ b/fishapp/src/main/resources/application.properties
@@ -9,5 +9,4 @@ spring.datasource.password=password
 spring.datasource.initialization-mode=create-drop
 spring.batch.initialize-schema=always
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
-#spring.jpa.hibernate.ddl-auto=update
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
